@@ -141,6 +141,7 @@ def getJvmArgs() {
             "--add-exports", "jdk.zipfs/jdk.nio.zipfs=io.xpipe.modulefs",
             "--add-opens", "javafx.graphics/com.sun.glass.ui=$appPackage",
             "--add-opens", "javafx.graphics/javafx.stage=$appPackage",
+            "--add-opens", "javafx.controls/javafx.scene.control.skin=$appPackage",
             "--add-opens", "javafx.graphics/com.sun.javafx.tk=$appPackage",
             "--add-opens", "javafx.graphics/com.sun.javafx.tk.quantum=$appPackage"
     ]
@@ -169,9 +170,20 @@ def getJvmArgs() {
                    '-XX:G1HeapRegionSize=4m'
     ]
 
+    // Why is this not on by default? ...
+    // https://docs.oracle.com/en/java/javase/25/docs/api/java.base/java/net/doc-files/net-properties.html
+    jvmRunArgs += [
+            '-Djava.net.useSystemProxies=true'
+    ]
+
     // Fix platform theme detection on macOS
     if (os.isMacOsX()) {
         jvmRunArgs += ["-Dapple.awt.application.appearance=system"]
+    }
+
+    // Use new metal pipeline on macOS
+    if (os.isMacOsX()) {
+        jvmRunArgs += ["-Dprism.order=mtl,es2,sw"]
     }
 
     if (os.isLinux()) {
@@ -282,7 +294,7 @@ project.ext {
     }
 
     // JavaFX config
-    devJavafxVersion = '26-ea+3'
+    devJavafxVersion = '26-ea+19'
     platformName = getPlatformName()
     useBundledJavaFx = fullVersion
     bundledJdkJavaFx = ModuleFinder.ofSystem().find("javafx.base").isPresent()
@@ -293,7 +305,7 @@ project.ext {
     deeplApiKey = findProperty('DEEPL_API_KEY') != null ? findProperty('DEEPL_API_KEY') : ""
 
     def injected = project.objects.newInstance(InjectedExecOps)
-    execOps = injected.execOps;
+    execOps = injected.execOps
 }
 
 group = groupName
